# GraphFEX

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  __init__.py  environment.yml  pyproject.toml  requirements.txt
FEX/: __init__.py  controllers.py  learnable_tree.py  nodes.py  operations.py  train_configs.py  train_controller.py  train_fex.py  tree_configs.py  utils.py
FEX/helpers/: __init__.py  pools.py  utils.py
FEX/models/: __init__.py  controllers.py  fex.py  learnable_tree.py  nodes.py
FEX/training/: __init__.py  finetune.py  loss_funcs.py  train_configs.py  train_controller.py  train_fex.py  tree_helpers.py
FEX/utils/: __init__.py  metrics.py  numerical_deriv.py  numerical_integrate.py  operations.py  plots.py  pools.py  sampler.py  tree_configs.py
HR/: fex_recovery.ipynb  score_computation.ipynb
HR/data/: BA_Nnodes100_Adj_deg_10_0.csv  BA_Nnodes100_Adj_deg_7_1.csv  HR_timeseries_BA.csv  HR_timeseries_BA_deg_10_0.csv  HR_timeseries_BA_deg_10_0_SNR_40.csv  HR_timeseries_BA_deg_7_1_SNR_45.csv  HR_timeseries_SNR_40.csv  HindmarshMain.m  LibraryThree.m  check_data.ipynb  generate_data.py  hindmarshrose.m  simulate_data.ipynb
HR/scripts/: eval_controller.py  eval_controller_dim1.py  eval_controller_dim_x.py  eval_controller_dim_yz.py  eval_fex.py  fex_recovery.py  (+4 more)
Laplacian-Diffusion/: simulate.ipynb
Lorenz-Dynamics/: generate_data.py
Point-Vortex/: fex_recovery.ipynb  generate_data.py
Rossler-Dynamics/: Rossler_timeseries.csv  fex_recovery.ipynb  generate_data.py
shell_scripts/: multi_cand.sh
src/: bindings.cpp
src/models/: nodes.hpp  (+1 more)
(+42 files in other folders)
